@startuml InfrastructureClasses

!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Deployment.puml

interface IUserRepository <<interface>> #aliceblue;line:blue;text:blue {

}

class SQLiteUserRepository <<repository>> #PaleGreen;line:Black;text:Black implements IUserRepository {

}

interface IDateBaseConnection <<interface>> #aliceblue;line:blue;text:blue {

}

class SQLiteConnection <<persistence>> #PaleGreen;line:Black;text:Black implements IDateBaseConnection {

} 

' from domain layer
abstract User<Domain Layer> <<abstract>> #Pink;line:Black;line.dotted;text:gray {
  # id: long 
  # username: String
  # fullname: String
  # password: String
  # role: Role
  # state: State
}

enum Role<Domain Layer> <<enumeration>> #LightBlue;line:Black;text:Black {
  Administrator
  Patient
  ClinicalStaff
  AppointmentManager
}

IUserRepository ..> User
SQLiteUserRepository ..> IDateBaseConnection
SQLiteUserRepository..> User
IUserRepository ..> Role
SQLiteUserRepository ..> Role

@enduml